fix: replace `Collectors.toList()` to `Stream.toList()`
"Stream.toList()" method should be used instead of "collectors" when unmodifiable list needed java:S6204