@@ -1,7 +1,6 @@
 package win.pluvivanto.roombook.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import win.pluvivanto.roombook.domain.Booking;
 import win.pluvivanto.roombook.domain.Room;
 import win.pluvivanto.roombook.dto.BookingCreateRequest;
@@ -42,6 +41,6 @@ public class BookingMapper {
   }
 
   public static List<BookingResponse> toResponseList(List<Booking> bookings) {
-    return bookings.stream().map(BookingMapper::toResponse).collect(Collectors.toList());
+    return bookings.stream().map(BookingMapper::toResponse).toList();
   }
 }
